--- a/26-Postgrsql-hotsbreplica-barmanbackup/barman-install/templates/barman.conf.j2
+++ b/26-Postgrsql-hotsbreplica-barmanbackup/barman-install/templates/barman.conf.j2
@@ -5,3 +5,4 @@ barman_home = /var/lib/barman
 log_file = /var/log/barman/barman.log
 log_level = DEBUG
 path_prefix = /usr/pgsql-11/bin
+compression = gzip
