Added exchanhe key commands

--- a/26-Postgrsql-hotsbreplica-barmanbackup/barman-install/templates/pg.conf.j2
+++ b/26-Postgrsql-hotsbreplica-barmanbackup/barman-install/templates/pg.conf.j2
@@ -1,7 +1,7 @@
 [pgmaster]
 description =  "Backup from pgmaster"
 conninfo = host={{ master_hostname }} user={{ barman_user }} dbname={{ base }}
-streaming_conninfo = host={{ master_hostname }} user={{ barman_user }} dbname={{ base }}
+streaming_conninfo = host={{ master_hostname }} user={{ barman_user }} 
 backup_method = postgres
 streaming_archiver = on
 slot_name = {{ barman_slot }}
